--- a/t/ala/css/app.css
+++ b/t/ala/css/app.css
@@ -903,7 +903,7 @@ a.prev span, a.next span {
 .profil_listesi { margin: 0; padding: 5px; list-style: none; font-size: 11px; }
 .profil_listesi > li {
 	display: block; position: relative; padding: 5px 5px 5px 68px;
-	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; min-height: 50px;}
 .profil_listesi > li > img {
 	position: absolute; left: 7px; top: 6px; width: 48px; height: 48px;
 	border: 1px solid #cdcdcd; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
