--- a/t/ala/css/app.css
+++ b/t/ala/css/app.css
@@ -96,7 +96,15 @@ body.atolye15_body { overflow-x: hidden; }
  * Ana Menü
  */
 #logo { display: inline-block; margin-top: 10px; }
-#ust_kisim { min-height: 60px; border-bottom: 1px solid #fff; }
+#ust_kisim { 
+	min-height: 60px; 
+	border-bottom: 1px solid #fff;  
+	box-shadow: 0 0 20px #333333; 
+	position: fixed; 
+	top: 0; 
+	width: 100%;
+    z-index: 1000;
+   }
 #ust_kisim hgroup { display: none; }
 
 #mobil_menu_tetikleyici {
@@ -307,7 +315,7 @@ body.atolye15_body { overflow-x: hidden; }
 .satirlar.padding_yok { padding: 0; }
 
 
-#icerik { margin-top: 25px; }
+#icerik { margin-top: 95px; }
 #icerik .container {
 	background: url(../img/yan-alan-golge.png) scroll repeat-y 284px 0px #fff;
 	border: 1px solid #d6d6d6; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
