--- a/t/ala/css/app.css
+++ b/t/ala/css/app.css
@@ -99,7 +99,7 @@ body.atolye15_body { overflow-x: hidden; }
 #ust_kisim { 
 	min-height: 60px; 
 	border-bottom: 1px solid #fff;  
-	box-shadow: 0 0 20px #333333; margin-left: -10px;
+	box-shadow: 0 0 20px #333333; 
     text-align: center;
     width: 245px;
 	position: fixed; 
