--- a/t/ala/css/app.css
+++ b/t/ala/css/app.css
@@ -100,7 +100,6 @@ body.atolye15_body { overflow-x: hidden; }
 	min-height: 60px; 
 	border-bottom: 1px solid #fff;  
 	box-shadow: 0 0 20px #333333; 
-    text-align: center;
     width: 245px;
 	position: fixed; 
 	top: 0; 
@@ -869,6 +868,9 @@ body.atolye15_body { overflow-x: hidden; }
 	margin-left: -10px;
     text-align: center;
     width: 245px;
+}
+.meclis_bottom_box .btn{
+	margin-top:0px !important;
 }
 .img-slider-content {
 	margin-top: 15px;
