--- a/t/ala/css/app.css
+++ b/t/ala/css/app.css
@@ -379,7 +379,7 @@ body.atolye15_body { overflow-x: hidden; }
 #yeni_yazi_yaz .kontroller button { float: right; margin-left: 10px; }
 #yeni_yazi_yaz .kontroller a { display: inline-block; float: right; margin-right: 5px; }
 
-.duvar_yazisi { padding: 20px; border-bottom: 1px solid #e8e8e8; position: relative; color: #000; line-height: 16px; }
+.duvar_yazisi { padding: 20px 20px 20px 20px; border-bottom: 1px solid #e8e8e8; position: relative; color: #000; line-height: 16px; }
 .duvar_yazisi .profil_resmi { position: absolute; top: 20px; left: 20px; width: 48px; height: 48px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
 .duvar_yazisi .yazar,
 .duvar_yazisi .duvar_yazisi_icerigi,
@@ -445,7 +445,7 @@ body.atolye15_body { overflow-x: hidden; }
 	z-index:100;
 	position:relative;
 	background-color: #F6F6F6;
-	margin:0;
+	margin: 10px -20px -10px;
     padding: 20px 40px 10px 80px;
 }
 .replyArea textarea{
